# ctxovrflw-client

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish-plugin.yml  release.yml
benchmarks/: README.md  bench_comprehensive.py  bench_conversational.py  bench_recall_quality.py  config.py  metrics.py  report.py  requirements.txt  run.py  scenarios.py  seed_memories.py
benchmarks/modes/: __init__.py  baseline.py  ctxovrflw.py  directed.py  tier_test.py
benchmarks/results/: .gitkeep  benchmark_results_20260216_181753.json  benchmark_results_20260216_181753_report.html  comprehensive_20260217_001738.json  comprehensive_20260217_024406.json  conversational_20260216_202208.json  conversational_20260216_212151.json  recall_quality_20260216_192439.json
benchmarks/templates/: report.html
ctxovrflw/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
ctxovrflw/src/: index.ts
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
skill/: SKILL.md
skill/scripts/: setup.sh
src/: capability.rs  chunking.rs  config.rs  daemon.rs  lib.rs  main.rs  maintenance.rs  validation.rs  webhooks.rs
src/cli/: account.rs  forget.rs  graph.rs  init.rs  init_auto.rs  init_tui.rs  login.rs  logout.rs  memories.rs  mod.rs  model.rs  model_tui.rs  recall.rs  reindex.rs  remember.rs  status.rs  update.rs
src/crypto/: mod.rs
src/db/: graph.rs  memories.rs  mod.rs  recall.rs  search.rs  webhooks.rs
src/embed/: mod.rs  models.rs
src/http/: mod.rs  routes.rs
src/mcp/: mod.rs  sse.rs  tools.rs  transport.rs
src/sync/: mod.rs
tests/: http_tests.rs  integration.rs
