[package]
name = "ctxovrflw"
version = "0.5.13"
edition = "2024"
description = "Universal AI context layer. One memory, every tool."
license = "MIT"
repository = "https://github.com/M4cs/ctxovrflw"
keywords = ["ai", "mcp", "memory", "context", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ctxovrflw"
path = "src/lib.rs"

[[bin]]
name = "ctxovrflw"
path = "src/main.rs"

[features]
default = []
onnx = ["dep:ort"]
pro = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP server (localhost REST API)
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }

# HTTP client (cloud sync)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "charset", "http2"], default-features = false }
hostname = "0.4"

# Database
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.7-alpha.2"

# Embeddings
ort = { version = "2.0.0-rc.11", optional = true, features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# MCP (stdio JSON-RPC)
jsonrpc-core = "18"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SSE streaming
async-stream = "0.3"
futures-core = "0.3"

# TUI / Interactive CLI
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
ratatui = "0.29"
crossterm = "0.28"

# Crypto (zero-knowledge sync)
ring = "0.17"
base64 = "0.22"
rand = "0.8"

# Utilities
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
atty = "0.2.14"
tempfile = "3"
flate2 = "1.1.9"
tar = "0.4.44"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
sha2 = "0.10"


[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
